# python-django-developer-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: hexlet-check.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: tests.py  urls.py  views.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
